Flush frames after the event handler so that new nodes inserted into the Selection are visible.  b=602231 r=bzbarsky a=blocking2.0:final